# NewGast

./: CMakeLists.txt  package.xml  readMe.md  setup.py
launch/: gastro.launch
msg/: MealUpdate.msg
scripts/: action_server.py  stepper_server.py  webserver.py
src/gastronomous/: Stepper.py
srv/: Meal.srv  MoveBy.srv
web/: index.html  main.js  test.html
